--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,18 @@
     "symfony/process": "^3.1.4",
     "symfony/validator": "^4.3",
     "twig/twig": "^2.11",
-    "fzaninotto/faker": "^1.8"
+    "fzaninotto/faker": "^1.8",
+    "phpstan/phpstan": "^0.12.9"
   },
   "bin": ["codegen"],
   "autoload": {
     "psr-4": {
       "Re2bit\\Generator\\": "./src"
     }
+  },
+  "scripts": {
+    "test": [
+      "vendor/bin/phpstan analyse --level 8 -c phpstan.neon"
+    ]
   }
 }
